registry/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-service
  labels:
    app: registry
spec:
  ports:
  - name: http
    port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: registry
