registry/registry-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: registry-ingress
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/app-root: /
spec:
  rules:
  - host: registry.cluster1.local
    http:
      paths:
      - path: /
        backend:
          serviceName: registry-service
          servicePort: 5000
  tls:
  - hosts:
    - registry.cluster1.local
    secretName: cicd-tls-secret
